tests/ui/nll/issue-27282-mutation-in-guard.stderr
error[E0507]: cannot move out of `foo` in pattern guard
  --> $DIR/issue-27282-mutation-in-guard.rs:8:18
   |
LL |                 (|| { let bar = foo; bar.take() })();
   |                  ^^             --- move occurs because `foo` has type `&mut Option<&i32>`, which does not implement the `Copy` trait
   |                  |
   |                  `foo` is moved here
   |
   = note: variables bound in patterns cannot be moved from until after the end of the pattern guard

error[E0507]: cannot move out of `foo` in pattern guard
  --> $DIR/issue-27282-mutation-in-guard.rs:20:18
   |
LL |                 (|| { let bar = foo; bar.take() })();
   |                  ^^             --- move occurs because `foo` has type `&mut Option<&i32>`, which does not implement the `Copy` trait
   |                  |
   |                  `foo` is moved here
   |
   = note: variables bound in patterns cannot be moved from until after the end of the pattern guard

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0507`.
